--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_two">two</string>
-    <string name="app_name">BPTL v3</string>
+    <string name="app_name">BPTL</string>
     <string name="industryprompt">Industry List</string>
     <string name="appby">BPTL ERP\nbeta v3\nApp By Shafiqur Rahman</string>
     <string name="title_activity_main2">Main2Activity</string>
